--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,26 @@
 @charset "utf-8";
 body{
+    color: #303030;
     font-size: 15px;
+    font-family: 'Gill Sans';
     line-height: 1.5;
 }
 
 .inner{
     width: 90%;
     max-width: 1200px;
-    margin: auto 0;
+    margin: 0 auto;
 }
 
 img{
     max-width: 100%;
+    vertical-align: middle;
 }
 
 /* header */
 
 header{
+    margin-bottom: 80px;
     text-align: center;
 }
 
@@ -33,4 +37,58 @@ header{
 
 .nav-grobal a:hover{
     color: #FFBF9D;
+}
+
+/* main */
+
+article{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+h2{
+    font-size: 18px;
+}
+
+.text{
+    width: 60%;
+    margin-left: 30px;
+}
+
+.newsletter{
+    background-color: #FDF5ED;
+}
+
+h3{
+    padding-top: 40px;
+    font-size: 26px;
+}
+
+.newsletter a{
+    display: inline-block;
+    margin: 40px 0;
+    padding: 20px 47px;
+    color: #fff;
+    background-color: #FFBF9D;
+    text-decoration: none;
+}
+
+.mail dl{
+    display: flex;
+}
+
+.mail dt{
+    display: inline-block;
+    color: #fff;
+    padding: 5px 30px;
+    background-color: #303030;
+}
+
+/* footer */
+
+footer p{
+    margin: 50px 0;
+    text-align: center;
 }
